# url_shortener

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
config/: .env.temlate
docker/: Dockerfile  entrypoint.sh
docker/caddy/: Caddyfile
src/: hashids.rs  main.rs  redis.rs
src/urls/: api.rs  error.rs  mod.rs  redis_url_repo.rs  types.rs  url_service.rs  utils.rs
static/css/: css.css
templates/: index.html
