[package]
name = "url_shortener"
version = "0.1.0"
authors = ["Arseniy Krasnov <arseniy@krasnoff.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
actix = "0.10"
actix-web = "3"
actix-cors = "0.5.4"
actix-identity = "0.3"
actix-files = "0.5"
redis = { version = "0.17.0", features = ["tokio-comp"] }
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
validator = { version = "0.12", features = ["derive"] }
tera = "1"
harsh = "0.2.1"

[dev-dependencies]
mockall = "0.8.3"
